# Aleph-Tav-Engine

./: ai-handoff.md  cls  docker-compose.yml  full_isaiah_analysis.py  isaiah40_cryptographic_analysis.txt  parse_analysis.py  test_atbah.py
backend/: .env  .gitignore  Divine_Speech_Patterns_in_Isaiah.md  __init__.py  analyze_isaiah40.py  batch_analyze.py  calculate_entropy.py  delta_lexicon_matches.json  delta_lexicon_scan.py  divine_names_extractor.py  divine_names_report.md  flag_anomalies.py  generate_embeddings.py  ingest_db.py  ingest_nt.py  main.py  pillar_analysis_raw.json  pyproject.toml  research_compiler.py  seed_cryptography.py  seed_temple.py  start_server.py  verify_search.py
backend/migrations/: env.py
backend/migrations/versions/: 1700e9b98c6d_add_anomalies_table.py  70aaac4d598a_add_word_cryptography_columns.py  9d3588f7f7cc_add_temple_dimensions_table.py  9e25c54c5a54_initial_schema_with_pgvector.py  b15ab639d5fa_add_is_public_to_saved_notes.py  dbad051a8b5a_add_users_and_notes_tables.py  e9e114f9080b_add_spatial_positions_to_saved_notes.py
backend/models/: cryptography.py
backend/routers/: analytics.py  cryptography.py  els.py  export.py  search.py  semantic_search.py  temurah.py  topology.py
backend/services/: ai_service.py  ingestion.py
backend/tests/: test_cryptography.py  test_entropy.py
backend/utils/: ciphers.py  els_scanner.py  entropy.py  gematria.py  normalization.py
backend/vector_indices/: lexicon_ids.json  verses_ids.json
data_sources/: stepbible-tbesh.json
frontend/: next.config.ts  package-lock.json  package.json
(+30 files in other folders)
