[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
